@@ -93,6 +93,7 @@ KallistiOS version 2.1.0 -----------------------------------------------
       as it should be to ensure GCC doesn't mess with it any [LS]
 - DC  Copy function data from maple device during hot-swap poll if already
       attached [Joe Fenton = JF]
+- DC  Added custom BIOS support [Ruslan Rostovtsev == SWAT]
 
 KallistiOS version 2.0.0 -----------------------------------------------
 - DC  Broadband Adapter driver fixes [Dan Potter == DP]
